Praticamente tudo feito! Falta apenas confirmar pequenas coisas, tabelas do schema e por comentários em tudo + fazer o esquema final para por a fig :)

--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -4312,7 +4312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4330,6 +4330,7 @@
     "# Drop new collections if they exist to start fresh\n",
     "db.drop_collection(\"Listings\")\n",
     "db.drop_collection(\"Reviews\")\n",
+    "db.drop_collection(\"Reviewers\")\n",
     "db.drop_collection(\"Transactions\")\n",
     "db.drop_collection(\"Hosts\")"
    ]
@@ -4461,7 +4462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -4470,14 +4471,34 @@
        "'Listing_ID_1'"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Step 3: Create Review.Listing_ID index for faster queries (\"Foreign Key\")\n",
+    "# Step 3: Create Review.Listing_ID and Review.Review_ID indexes for faster queries (\"Foreign Key\")\n",
     "db.Reviews.create_index([(\"Listing_ID\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Review_ID_1'"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.Reviews.create_index([(\"Review_ID\")])"
    ]
   },
   {
@@ -4502,44 +4523,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.synchronous.command_cursor.CommandCursor at 0x1fae0bfff20>"
+       "{'nIndexesWas': 1, 'ns': 'sample_airbnb.Reviewers', 'ok': 1.0}"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.drop_collection(\"Reviewers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.synchronous.command_cursor.CommandCursor at 0x1fade800ce0>"
+      ]
+     },
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Step 1: Create Reviewers collection\n",
-    "reviewers_fields = [\"_id\", \"reviews.reviewer_id\"]\n",
+    "reviewers_fields = [\"_id\", \"reviews.reviewer_id\", \"reviews.reviewer_name\"]\n",
     "\n",
     "# Aggregate to extract unique reviewers and their corresponding review IDs\n",
     "db.listingsAndReviews_HW2.aggregate([\n",
-    "    {\"$unwind\": \"$reviews\"},                                                        # Unwind the 'reviews' array to create a document for each review\n",
+    "    {\"$unwind\": \"$reviews\"},                                        # Unwind the 'reviews' array to create a document for each review\n",
     "    {\"$group\": {\n",
-    "        \"_id\": \"$reviews.reviewer_id\",                                              # Group by reviewer ID\n",
-    "        \"Review_IDs\": {\"$addToSet\": \"$reviews._id\"}                                 # Collect unique review IDs for each reviewer\n",
+    "        \"_id\": \"$reviews.reviewer_id\",                              # Group by reviewer ID\n",
+    "        \"Reviewer_Name\": {\"$first\": \"$reviews.reviewer_name\"},      # Take the first name (assumes consistency)\n",
     "    }},\n",
     "    {\"$project\": {\n",
-    "        \"_id\": 0,                                                                  # Will create a ObjectId for each reviewer\n",
-    "        \"Reviewer_ID\": \"$_id\",                                                     # Include the reviewer ID\n",
-    "        \"Review_IDs\": 1                                                            # Include the review IDs\n",
+    "        \"_id\": \"$_id\",                                              # Use Reviewer_ID as the document _id (not an ObjectId)\n",
+    "        \"Reviewer_ID\": \"$_id\",                                      # Include reviewer ID\n",
+    "        \"Reviewer_Name\": 1,                                         # Include reviewer name\n",
     "    }},\n",
-    "    # Source: https://www.mongodb.com/docs/manual/reference/operator/aggregation/out/\n",
-    "    {\"$out\": \"Reviewers\"}                                                          # Output directly to 'Reviewers' collection in the same database\n",
+    "    # Output directly to 'Reviewers' collection\n",
+    "    {\"$out\": \"Reviewers\"}\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -4549,9 +4590,7 @@
       "\n",
       "\u001b[1mNumber of documents in 'Reviewers' collection:\u001b[0m 146640\n",
       "\u001b[1mSample document from 'Reviewers' collection:\u001b[0m\n",
-      "{'_id': ObjectId('67ebd8ba655075df1b673db2'),\n",
-      " 'Review_IDs': ['243694820'],\n",
-      " 'Reviewer_ID': '77196862'}\n"
+      "{'_id': '170450043', 'Reviewer_Name': 'Robert', 'Reviewer_ID': '170450043'}\n"
      ]
     }
    ],
@@ -4564,7 +4603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -4573,14 +4612,34 @@
        "'Reviewer_ID_1'"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Step 3: Create Reviewers.Reviewer_ID index for faster queries (\"Foreign Key\")\n",
-    "db.Reviewers.create_index([(\"Reviewer_ID\")])  # Create index on Reviewer_ID field"
+    "# Step 3: Create Reviewers.Reviewer_ID and Reviews.Reviewer_ID indexes for faster queries (\"Foreign Key\")\n",
+    "db.Reviewers.create_index([(\"Reviewer_ID\")])                                        # Create index on Reviewer_ID field in Reviewers collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Reviewer_ID_1'"
+      ]
+     },
+     "execution_count": 315,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.Reviews.create_index([(\"Reviewer_ID\")])                                          # Create index on Reviewer_ID field in Reviews collection"
    ]
   },
   {
@@ -5455,7 +5514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -5464,14 +5523,34 @@
        "'Listing_ID_1'"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Step 4: Create Listings.Listing_ID index for faster queries (\"Foreign Key\")\n",
+    "# Step 4: Create Listings.Listing_ID and Listings.Host_ID indexes for faster queries (\"Foreign Key\")\n",
     "db.Listings.create_index([(\"Listing_ID\")])                                      # Create index on Listing_ID field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Host_ID_1'"
+      ]
+     },
+     "execution_count": 321,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.Listings.create_index([(\"Host_ID\")])                                         # Create index on Host_ID field"
    ]
   },
   {
@@ -5968,16 +6047,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 17.7796 seconds\n",
+      "Execution time: 18.1458 seconds\n",
+      "[{'ReviewLength': 4665, 'ReviewerName': 'Angela'}]\n",
       "\n",
-      "Reviewer who wrote the longest review in New York is: \u001b[1m46731589\u001b[0m with \u001b[1m4665 characters\u001b[0m\n"
+      "Reviewer who wrote the longest review in New York is: \u001b[1mAngela\u001b[0m with \u001b[1m4665 characters\u001b[0m\n"
      ]
     }
    ],
@@ -6020,7 +6100,7 @@
     "    # Project reviewer name\n",
     "    {\"$project\": {\n",
     "        \"_id\": 0,\n",
-    "        \"ReviewerName\": \"$reviewer.Reviewer_ID\",\n",
+    "        \"ReviewerName\": \"$reviewer.Reviewer_Name\",\n",
     "        \"ReviewLength\": 1\n",
     "    }},\n",
     "    \n",
@@ -6034,6 +6114,7 @@
     "\n",
     "# pprint(query4)\n",
     "print(f\"Execution time: {execution_time:.4f} seconds\")\n",
+    "pprint(query4, sort_dicts=False)\n",
     "print(f\"\\nReviewer who wrote the longest review in New York is: \\033[1m{query4[0]['ReviewerName']}\\033[0m with \\033[1m{query4[0]['ReviewLength']} characters\\033[0m\")"
    ]
   },
