Esquema final da base de dados

--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -4177,7 +4177,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "> **Note:** All the operations are mostly *reads*"
+    "> **Note:** All the operations that we will do are mostly *reads*, but in real-world cenarios, ***AirBnB*** would have to do a lot of *writes* as well. So, we will try to optimize the database for both reads and writes."
    ]
   },
   {
@@ -4215,7 +4215,7 @@
     "\n",
     "<div class=\"alert alert-block alert-danger\">\n",
     "\n",
-    "**ATUALIZAR TABELA**\n",
+    "# **ATUALIZAR TABELA**\n",
     "\n",
     "</div>\n"
    ]
@@ -4293,7 +4293,7 @@
     "\n",
     "<p style=\"text-align: center !important;\">\n",
     "    <!-- Final Schema Design  -->\n",
-    "    <img src=\"./img/FinalSchemaDesign.png\" height=\"400\" alt=\"Final Schema Design\" />\n",
+    "    <img src=\"./img/FinalSchemaDesign.png\" with=\"400\" alt=\"Final Schema Design\" />\n",
     "</p>"
    ]
   },
