Já acrescentei os comentários/código do Alex ao principal (exceto aqueles que deixei no Discord - Ver próxima reunião)

--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -2937,7 +2937,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We don't consider the `reviews` and `transactions` fields as missing data, as they are arrays and not subdocuments (so, if we consider them, we will have X different fields as `reviews` and `transactions`)."
+    "**Missing data in fields inside `reviews` subdocuments**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_reviews = [\n",
+    "    { \"$unwind\": \"$reviews\" },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"missing_date\": {\n",
+    "                \"$or\": [\n",
+    "                    { \"$eq\": [\"$reviews.date\", None] },\n",
+    "                    { \"$eq\": [\"$reviews.date\", \"\"] }\n",
+    "                ]\n",
+    "            },\n",
+    "            \"missing_listing_id\": {\n",
+    "                \"$or\": [\n",
+    "                    { \"$eq\": [\"$reviews.listing_id\", None] },\n",
+    "                    { \"$eq\": [\"$reviews.listing_id\", \"\"] }\n",
+    "                ]\n",
+    "            },\n",
+    "            \"missing_reviewer_id\": {\n",
+    "                \"$or\": [\n",
+    "                    { \"$eq\": [\"$reviews.reviewer_id\", None] },\n",
+    "                    { \"$eq\": [\"$reviews.reviewer_id\", \"\"] }\n",
+    "                ]\n",
+    "            },\n",
+    "            \"missing_reviewer_name\": {\n",
+    "                \"$or\": [\n",
+    "                    { \"$eq\": [\"$reviews.reviewer_name\", None] },\n",
+    "                    { \"$eq\": [\"$reviews.reviewer_name\", \"\"] }\n",
+    "                ]\n",
+    "            },\n",
+    "            \"missing_comments\": {\n",
+    "                \"$or\": [\n",
+    "                    { \"$eq\": [\"$reviews.comments\", None] },\n",
+    "                    { \"$eq\": [\"$reviews.comments\", \"\"] }\n",
+    "                ]\n",
+    "            }\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": None,\n",
+    "            \"total\": { \"$sum\": 1 },\n",
+    "            \"missing_date\": { \"$sum\": { \"$cond\": [\"$missing_date\", 1, 0] } },\n",
+    "            \"missing_listing_id\": { \"$sum\": { \"$cond\": [\"$missing_listing_id\", 1, 0] } },\n",
+    "            \"missing_reviewer_id\": { \"$sum\": { \"$cond\": [\"$missing_reviewer_id\", 1, 0] } },\n",
+    "            \"missing_reviewer_name\": { \"$sum\": { \"$cond\": [\"$missing_reviewer_name\", 1, 0] } },\n",
+    "            \"missing_comments\": { \"$sum\": { \"$cond\": [\"$missing_comments\", 1, 0] } }\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "\n",
+    "result = db.listingsAndReviews_HW2.aggregate(pipeline_reviews)\n",
+    "for doc in result:\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Missing data in fields inside `transactions` subdocuments**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_transactions = [\n",
+    "    { \"$unwind\": \"$transactions.transactions\" },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"missing_date\": {\n",
+    "                \"$or\": [\n",
+    "                    { \"$eq\": [\"$transactions.transactions.date\", None] },\n",
+    "                    { \"$eq\": [\"$transactions.transactions.date\", \"\"] }\n",
+    "                ]\n",
+    "            },\n",
+    "            \"missing_price\": {\n",
+    "                \"$or\": [\n",
+    "                    { \"$eq\": [\"$transactions.transactions.price\", None] },\n",
+    "                    { \"$eq\": [\"$transactions.transactions.price\", \"\"] }\n",
+    "                ]\n",
+    "            }\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": None,\n",
+    "            \"total\": { \"$sum\": 1 },\n",
+    "            \"missing_date\": { \"$sum\": { \"$cond\": [\"$missing_date\", 1, 0] } },\n",
+    "            \"missing_price\": { \"$sum\": { \"$cond\": [\"$missing_price\", 1, 0] } }\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "\n",
+    "result = db.listingsAndReviews_HW2.aggregate(pipeline_transactions)\n",
+    "for doc in result:\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We do not treat the `reviews` and `transactions` fields as missing data because they are **arrays of subdocuments**, not simple scalar fields. Analyzing them as \"missing\" at the top level would be misleading — the field may exist and simply contain an empty array.\n",
+    "\n",
+    "- Instead, we evaluate the **completeness of the data inside** these arrays by unwinding them and checking for missing values within each subdocument (e.g., `review.date`, `transaction.price`). This allows us to capture cases where fields are either null, missing entirely, or empty strings.\n",
+    "\n",
+    "- Our analysis showed that all `transactions` (n = 311,093) are fully populated, with **no missing values** in the inspected fields. Among the `reviews` (n = 149,793), we found **42 missing values** in the `comments` field (i.e., either `null` or empty).\n",
+    "\n",
+    "- Therefore, we do not include these array fields in the **top-level missing value summary**, as their completeness must be assessed at the nested level — otherwise, we risk oversimplifying the structure of the data."
    ]
   },
   {
@@ -6984,17 +7105,6 @@
     "print(f\"Execution time: {execution_time:.4f} seconds\\n\")\n",
     "pprint(result)\n",
     "print(f\"\\n\\33[1mTotal unique amenities:\\33[0m {db.Amenities.count_documents({})}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "\n",
-    "### **Não sei se é este o propósito ou apenas fazer uma lista e agrupar por amenities para ficarem unicos**\n",
-    "\n",
-    "</div>"
    ]
   },
   {
