Comentários do João + Filipa + Refiz df missing, data types e summary

--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -10668,6 +10668,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mUpdated average score for property ID 20000000:\u001b[0m\n",
+      "{'_id': ObjectId('67fceb221abb1450f62a5a3a'), 'Review_Scores_Avg': 1.4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the updated average score\n",
+    "print(f\"\\n\\033[1mUpdated average score for property ID 20000000:\\033[0m\")\n",
+    "pprint(db.Listings.find_one({\"Listing_ID\": \"20000000\"},{\"Review_Scores_Avg\": 1}), sort_dicts=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
