--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -10171,19 +10171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot convert 100.0 to Decimal128",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[130], line 13\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Top 10 amenities from Query 7 (since we don't have 'Amenities' collection in the original data, we will input the top 10 amenities manually)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m top_amenities \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWifi\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEssentials\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mKitchen\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTV\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHangers\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHair dryer\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWasher\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mShampoo\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIron\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLaptop friendly workspace\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m new_property \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m20000000\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNew York Loft\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhost_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m99999999\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhost_name\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGroup 5\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmarket\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNew York\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mamenities\u001b[39m\u001b[38;5;124m\"\u001b[39m: top_amenities,\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m\"\u001b[39m: Decimal128(\u001b[38;5;241m100.00\u001b[39m)\n\u001b[0;32m     14\u001b[0m }\n\u001b[0;32m     15\u001b[0m db\u001b[38;5;241m.\u001b[39mlistingsAndReviews_HW2\u001b[38;5;241m.\u001b[39minsert_one(new_property)\n\u001b[0;32m     16\u001b[0m execution_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time\n",
-      "File \u001b[1;32mc:\\Anaconda3\\envs\\bdmm\\Lib\\site-packages\\bson\\decimal128.py:228\u001b[0m, in \u001b[0;36mDecimal128.__init__\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m    226\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__high, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__low \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m    227\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot convert \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m to Decimal128\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: Cannot convert 100.0 to Decimal128"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Inserted property: 20000000, Time: 0.0187 seconds'\n"
      ]
     }
    ],
@@ -10200,7 +10195,7 @@
     "    \"host_name\": \"Group 5\",\n",
     "    \"address\": {\"market\": \"New York\"},\n",
     "    \"amenities\": top_amenities,\n",
-    "    \"price\": Decimal128(100.00)\n",
+    "    \"price\": Decimal128(\"100.00\")\n",
     "}\n",
     "db.listingsAndReviews_HW2.insert_one(new_property)\n",
     "execution_time = time.time() - start_time\n",
@@ -10218,9 +10213,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': '20000000',\n",
+      " 'address': {'market': 'New York'},\n",
+      " 'amenities': ['Wifi',\n",
+      "               'Essentials',\n",
+      "               'Kitchen',\n",
+      "               'TV',\n",
+      "               'Hangers',\n",
+      "               'Hair dryer',\n",
+      "               'Washer',\n",
+      "               'Shampoo',\n",
+      "               'Iron',\n",
+      "               'Laptop friendly workspace'],\n",
+      " 'host_id': '99999999',\n",
+      " 'host_name': 'Group 5',\n",
+      " 'name': 'New York Loft',\n",
+      " 'price': Decimal128('100.00')}\n"
+     ]
+    }
+   ],
    "source": [
     "# 12.1) Query the new property to verify the insertion\n",
     "result = db.listingsAndReviews_HW2.find_one({\"_id\": \"20000000\"})\n",
@@ -10248,9 +10266,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted property and host, Time: 0.0478 seconds\n",
+      "\n",
+      "{'_id': ObjectId('67fe963d2e55f326b63fac85'),\n",
+      " 'Listing_ID': '20000000',\n",
+      " 'Name': 'New York Loft',\n",
+      " 'Host_ID': '99999999',\n",
+      " 'Address': {'market': 'New York'},\n",
+      " 'Amenities': ['24-hour check-in',\n",
+      "               'Accessible-height bed',\n",
+      "               'Accessible-height toilet',\n",
+      "               'Air conditioning',\n",
+      "               'Air purifier',\n",
+      "               'Alfresco shower',\n",
+      "               'BBQ grill',\n",
+      "               'Baby bath',\n",
+      "               'Baby monitor',\n",
+      "               'Babysitter recommendations'],\n",
+      " 'Price': Decimal128('100.00')}\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "\n",
@@ -10301,7 +10344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10317,9 +10360,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': '13574006',\n",
+      " 'host_name': 'José',\n",
+      " 'reviews': [{'_id': '256178235',\n",
+      "              'comments': 'Great stay. The perfect house with the perfect '\n",
+      "                          'service. We did a last minute booking and '\n",
+      "                          'everything went smooth. Everything was very clean '\n",
+      "                          'and the comunication was perfect. The house is '\n",
+      "                          'incredibly luxorious and fully equppied. Highly '\n",
+      "                          'recommended',\n",
+      "              'date': datetime.datetime(2018, 4, 22, 4, 0),\n",
+      "              'listing_id': '13574006',\n",
+      "              'reviewer_id': '20775242',\n",
+      "              'reviewer_name': 'Filipe'}]}\n"
+     ]
+    }
+   ],
    "source": [
     "# 13.1) Get the top reviewer ID from Question 8\n",
     "\n",
@@ -10336,9 +10399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added review, Time: 0.0095 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# 13. Add review from top reviewer\n",
     "start_time = time.time()\n",
@@ -10371,18 +10442,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('67fe9243a6298d01adfdfc07'),\n",
+       "  'Reviewer_Name': 'Orit',\n",
+       "  'Reviewer_ID': '163366047',\n",
+       "  'ReviewCount': 1},\n",
+       " {'_id': ObjectId('67fe9243a6298d01adfdfc08'),\n",
+       "  'Reviewer_Name': 'Mason',\n",
+       "  'Reviewer_ID': '28632484',\n",
+       "  'ReviewCount': 1},\n",
+       " {'_id': ObjectId('67fe9243a6298d01adfdfc09'),\n",
+       "  'Reviewer_Name': 'Francisco',\n",
+       "  'Reviewer_ID': '51938077',\n",
+       "  'ReviewCount': 1},\n",
+       " {'_id': ObjectId('67fe9243a6298d01adfdfc0a'),\n",
+       "  'Reviewer_Name': 'Allison',\n",
+       "  'Reviewer_ID': '5864723',\n",
+       "  'ReviewCount': 1},\n",
+       " {'_id': ObjectId('67fe9243a6298d01adfdfc0b'),\n",
+       "  'Reviewer_Name': 'Coraline',\n",
+       "  'Reviewer_ID': '150833183',\n",
+       "  'ReviewCount': 1}]"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(db.Reviewers.find().limit(5))  # Display first few reviewers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added review, Time: 0.0746 seconds\n",
+      "\n",
+      "{'_id': ObjectId('67fe96402e55f326b63fac86'),\n",
+      " 'Listing_ID': '20000000',\n",
+      " 'Review_ID': '99999999',\n",
+      " 'Reviewer_ID': '2839881',\n",
+      " 'Review_Comments': 'Great loft!',\n",
+      " 'Review_Date': datetime.datetime(2025, 4, 15, 18, 24, 16, 136000)}\n",
+      "{'_id': ObjectId('67fe9244a6298d01ad000718'),\n",
+      " 'Reviewer_Name': 'Marisa Y Gonzalo',\n",
+      " 'Reviewer_ID': '2839881',\n",
+      " 'ReviewCount': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "\n",
@@ -10444,7 +10564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10461,9 +10581,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 0.0159 seconds\n",
+      "\n",
+      "Average score across all review metrics for property ID 20000000: \u001b[1m10.0\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# 14. Add x_factor metric and calculate average\n",
     "start_time = time.time()\n",
@@ -10542,9 +10672,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mReview_Scores for property ID 20000000:\u001b[0m\n",
+      "{'_id': ObjectId('67fe963d2e55f326b63fac85')}\n",
+      "\n",
+      "\u001b[1mUpdated Review_Scores for property ID 20000000:\u001b[0m\n",
+      "{'_id': ObjectId('67fe963d2e55f326b63fac85'), 'Review_Scores': {'XFactor': 10}}\n",
+      "\n",
+      "Execution time: 0.0107 seconds\n",
+      "\n",
+      "\n",
+      "Average score with new metric: \u001b[1m10.0\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "\n",
@@ -10594,9 +10742,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Update the average score in the Listings collection (Computed Pattern)\n",
     "# Since we create a new field in the Listings collection to store the average review score, we need to update every time we add a new metric.\n",
@@ -10608,9 +10767,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mUpdated average score for property ID 20000000:\u001b[0m\n",
+      "{'_id': ObjectId('67fe963d2e55f326b63fac85'), 'Review_Scores_Avg': 10.0}\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the updated average score\n",
     "print(f\"\\n\\033[1mUpdated average score for property ID 20000000:\\033[0m\")\n",
